--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,10 +5,14 @@ html {
 }
 
 .container {
+  display: grid;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  grid-template-columns: 300px 900px;
+  grid-template-rows: 110px 100px 500px 100px;
+  gap: 15px;
 }
 
 .container div {
@@ -22,10 +26,13 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -38,6 +45,7 @@ html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 /3;
 }
 
 .article p {
